--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.10.2",
+    "react-native-image-picker": "^5.4.0",
     "react-native-maps": "1.7.1",
     "react-native-permissions": "^3.8.0",
     "react-native-reanimated": "^3.2.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vision-camera": "^2.15.4"
   },
   "devDependencies": {
