--- a/package.json
+++ b/package.json
@@ -10,20 +10,33 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-camera-roll/camera-roll": "^5.6.0",
+    "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-firebase/app": "^18.0.0",
+    "@react-native-firebase/auth": "^18.0.0",
+    "@react-native-firebase/firestore": "^18.0.0",
+    "@react-native-firebase/storage": "^18.0.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
-    "firebase": "^9.22.1",
+    "@react-navigation/native-stack": "^6.9.12",
+    "expo-font": "^11.1.1",
+    "expo-image-picker": "^14.1.1",
+    "expo-status-bar": "^1.4.4",
+    "firebase": "^9.22.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.10.2",
-    "react-native-image-picker": "^5.4.0",
+    "react-native-image-picker": "^5.4.2",
     "react-native-maps": "1.7.1",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-permissions": "^3.8.0",
     "react-native-reanimated": "^3.2.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-vision-camera": "^2.15.4"
   },
   "devDependencies": {
